test/errors/builtin_types_error/zs/bitfield0_error.zs
package bitfield0_error;

struct WrongBitfield
{
    bit<0>  wrong;
};
